<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Manager</string>
    <string name="patientMain">Patient Main</string>
    <string name="physicianMain">Physician Main</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_main">Patient Main</string>
    <string name="title_activity_physician_main">Physician Main</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_physician_patient_list">Physician\'s Patients</string>
    <string name="login_title">Login Error</string>
    <string name="login_failed_message">Login Failed</string>
    <string name="ok">OK</string>
    <string name="title_activity_check_in_alarms">Check-In Alarms</string>
    <string name="title_activity_patient_checkin">Patient Check-In</string>
    <string name="patient_pain_question">How bad is your mouth pain/sore throat?</string>
    <string name="pain_controlled">Well-Controlled</string>
    <string name="pain_moderate">Moderate</string>
    <string name="pain_severe">Severe</string>
    <string name="medication_question">Did you take your pain medication?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="specific_medication_question">Did you take your</string>
    <string name="pain_stop_eating">Does your pain stop you from eating/drinking?</string>
    <string name="some">Some</string>
    <string name="not_eating">I Can\'t Eat</string>
    <string name="enter_date_and_time_of_taking_medication">Please enter date and time of taking medication</string>
    <string name="save_checkin">Save Check-In</string>
    <string name="title_activity_patient_medication_list">Patient MedicationsList</string>
    <string name="title_activity_patient_prescriptions_list">Patient Prescriptions</string>
    <string name="title_activity_patient_check_in_history">Check-In History</string>
    <string name="take_pain_medication_question">Did you take your pain medication?</string>
    <string name="title_activity_patient_check_in_alarms_list">Check-In Alarm Times</string>
    <string name="title_activity_pick_date_time">PickDateTimeActivity</string>
    <string name="title_activity_patient_check_in_graph">Patient Check In Graph</string>

</resources>
