<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sbunke.activities.PatientCheckInActivity">
<!--
    <TextView
        android:text="@string/pain_stop_eating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"

        android:layout_centerHorizontal="true" />

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/radioButton3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some"
            android:id="@+id/radioButton5"
            android:checked="false"
            android:layout_below="@+id/radioButton4"
            android:layout_alignStart="@+id/radioButton4" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_eating"
            android:id="@+id/radioButton6"
            android:checked="false"
            android:layout_below="@+id/radioButton5"
            android:layout_alignStart="@+id/radioButton5"
            android:layout_alignEnd="@+id/textView" />

        </RadioGroup>
-->
    <!--
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginTop="134dp"

        android:layout_alignParentStart="true" />

        -->

    <TextView
        android:text="@string/patient_pain_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMedicationQuestion"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
<RadioGroup
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:id="@+id/radioGroup">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pain_controlled"
        android:id="@+id/radioButton"
        android:checked="false"
        android:layout_below="@+id/tvMedicationQuestion"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pain_moderate"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:layout_below="@+id/tvMedicationQuestion"
        android:layout_toEndOf="@+id/radioButton" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pain_severe"
        android:id="@+id/radioButton3"
        android:checked="false"
        android:layout_below="@+id/tvMedicationQuestion"
        android:layout_toEndOf="@+id/radioButton2" />
</RadioGroup>

    <TextView
        android:text="@string/pain_stop_eating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"

        android:layout_centerHorizontal="true" />

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/radioButton3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some"
            android:id="@+id/radioButton5"
            android:checked="false"
            android:layout_below="@+id/radioButton4"
            android:layout_alignStart="@+id/radioButton4" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_eating"
            android:id="@+id/radioButton6"
            android:checked="false"
            android:layout_below="@+id/radioButton5"
            android:layout_alignStart="@+id/radioButton5"
            android:layout_alignEnd="@+id/tvMedicationQuestion" />

    </RadioGroup>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"

        android:layout_alignParentStart="true" />
</LinearLayout>
